fixed collapse navbar

--- a/css/main.css
+++ b/css/main.css
@@ -304,9 +304,5 @@ border-color: #b61924;
 background-color: #b61924;
 color: white;
 font-size: 18px;
-display: none; 
-}
-
-.croix{
-  color: white;
+display: none;
 }
